--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "dev": "concurrently \"npm:start\" \"nodemon -e scss -x \\\"npm run build:scss\\\"\"",
+    "build:scss": "sass src/index.scss src/main.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22"
   }
 }
